
package lapr.project.utils;
/*
import java.io.*;

public class ClosestPlacesSystem {


    private ClosestPlacesSystem() {
    }

    public static boolean outPutResume(String resume) {

        try {
            FileOutputStream f = new FileOutputStream("closestPlaces//ClosestPlacesOutput.txt");
            ObjectOutputStream o = new ObjectOutputStream(f);
            try {
                if (resume == null) {
                    return false;
                }
                o.writeObject(resume);
            } finally {

                o.close();
                f.close();
            }

        } catch (IOException e) {
            e.printStackTrace();
            return false;
        }
        return true;
    }
}
*/
